fixed newsletter padding on mobile

--- a/web/wp-content/themes/cncf-theme/source/scss/components/_newsletter.scss
+++ b/web/wp-content/themes/cncf-theme/source/scss/components/_newsletter.scss
@@ -4,7 +4,6 @@
     color: $white;
     padding-top: 1em;
     padding-bottom: 2em;
-    margin-top: 4em;
 
     @media (min-width: 768px) {
         margin-top: 0;
